--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <h1>Formularios</h1>
 </header>
 <body>
-    <form class="formu" onsubmit="return validad()">
-        Nombre: <br>
+    
+    <form class="formu" onsubmit="return valida()">
+       <label><p>Nombre:</p></label><br>
         <input type="text" id="nombre"><br>
-        Apellidos: <br>
+        <label ><p>Apellido: </p></label><br>
         <input type="text" id="apellido"><br>
-        Edad: <br>
+        <label ><p>Edad:</p></label> <br>
         <input type="number" id="edad"><br>
-        Sexo: <br>
+        <label ><p>Sexo: </p></label> <br>
         Masculino <input type="checkbox" id="check">
         Femenino <input type="checkbox" id="check"> <br>
         <input type="submit" value="Enviar"> 
